# esp

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
esp32c6/: .gitignore  Cargo.toml  README.md
esp32c6/src/: led.rs  lib.rs  main.rs  status.rs
